# emulator

./: CMakeLists.txt
libs/cpu/: CMakeLists.txt
libs/cpu/R6502/: R6502.h
libs/cpu/test/: CMakeLists.txt
libs/cpu/test/R6502/: basic.cpp
